<com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="1dp"
    android:translationZ="3dp"
    app:cardCornerRadius="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8F2F2"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="8"
                android:orientation="horizontal">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/profile"
                    app:civ_border_color="#3f51b5"
                    android:layout_weight="1"
                    app:civ_border_width="1dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="0.5dp"
                    app:civ_shadow_color="#3f51b5"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="6"
    android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginLeft="5dp"
                android:textSize="15dp"
                android:textColor="#48464A"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondary_text"
            android:textSize="13dp"
            android:textColor="#48464A"
            android:textAppearance="?attr/textAppearanceBody2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textAlignment="center"
            android:textSize="13dp"
            android:textColor="#48464A"
            android:textAppearance="?attr/textAppearanceBody2"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_time"
            android:textSize="13dp"
            android:textColor="#48464A"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>

</LinearLayout>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    app:chipMinHeight="15dp"
                    app:chipIconSize="13dp"
                    app:chipIconTint="#656363"
                    android:layout_weight="1"
                    app:chipCornerRadius="13dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    app:chipIcon="@drawable/deadline_icon"
                    android:textColor="@color/black"
                    android:layout_marginTop="-10dp"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/deadline"
 />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/supporting_text"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="#48464A"
                />



        </LinearLayout>
        <!-- Media -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/media"
            android:scaleType="centerCrop"
            android:contentDescription="@string/content_description_media"
            />
        <!-- Buttons -->




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="6"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                style="?attr/borderlessButtonStyle"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/like_icon"
                app:iconTint="#605E61" />

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textColor="#48464A"
                android:layout_weight="1"
                app:icon="@drawable/comment_icon"
                app:iconTint="#605E61" />


            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/alarm_black"
                app:iconTint="#605E61" />

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#48464A"
                app:icon="@drawable/mic_icon"
                app:iconTint="#605E61"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seen_by"
                android:layout_weight="2"
                android:textSize="10dp"
                android:textColor="#605E61"
                android:textAppearance="?attr/textAppearanceBody2"
                android:gravity="center" />
        </LinearLayout>





    </LinearLayout>

</com.google.android.material.card.MaterialCardView>