<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".post">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:liftOnScroll="false">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Notify"
            android:textAlignment="center"
            app:navigationIcon="@drawable/search"
            app:menu="@menu/top_app_bar"
            app:title="@string/profile"
            app:titleMarginTop="0dp"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
            app:titleTextColor="#FFFFFF"
            android:gravity="center_horizontal">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="29">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="188dp"
            android:layout_height="188dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:elevation="8dp"
            android:translationZ="5dp"
            app:civ_border_color="#68B2EA"
            app:civ_border_width="10dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#404042"
            app:civ_shadow_radius="1.5dp"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="bottom"
            android:text="Milton Kumar Kundu"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="Assistant Professor"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/name_of_dept"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/name_of_university"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:clickable="false"
            android:text="@string/email"
            android:textAllCaps="false"
            app:icon="@drawable/envalop_icon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/textButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_weight="13"
            android:text="@string/edit"
            android:textAllCaps="false"
            app:icon="@drawable/pen_icon" />

        <Button
            android:id="@+id/containedButton"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="60dp"
            android:layout_weight="1"
            android:background="@drawable/logout_btn_shape"
            android:backgroundTint="#2BB7F8"
            android:gravity="center"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textSize="20dp" />

    </LinearLayout>


    <include
        layout="@layout/bottom_navigation_bar"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>